<resources>
    <string name="app_name">Shop Lin</string>

    <!--    Title-->
    <string name="login_title">Login</string>
    <string name="register_title">create an account</string>
    <string name="forgot_password_title">Forgot Password?</string>

    <!--    Hint-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_confirm_password">Confirm password</string>

    <!--    Text-->
    <string name="don_t_have_an_account">"Don't have an account? "</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="i_agree_to_the_terms_and_condition">I agree to the terms and condition</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="forgot_password_title_description">Enter your username and e-mail address we\'ll send you an email to reset your password. </string>

    <!--    Button-->
    <string name="btn_lbl_login">Login</string>
    <string name="btn_lbl_register">Register</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="btn_lbl_submit">Submit</string>
    <string name="btn_forgot_password">Forgot Password?</string>

    <!--    Description-->
    <string name="content_description">image</string>

    <!--    Error-->
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="err_msg_first_name">Please enter your first name.</string>
    <string name="err_msg_last_name">Please enter your last name</string>
    <string name="err_msg_email_empty">Please enter your email.</string>
    <string name="err_msg_email_missmatch">Please a correct email.</string>
    <string name="err_msg_password">Please enter your password.</string>
    <string name="err_msg_password_number">Please enter 7 characters for your password.</string>
    <string name="err_msg_confirm_password">Please confirm your password.</string>
    <string name="err_msg_password_and_confirm_password_missmatch">Password are not the same</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>

    <!--    Success-->
    <string name="you_are_successfully_register">Your are registed successfully</string>
    <string name="you_are_successfully_logged">You are successfully logged</string>
    <string name="registery_successfull">Thanks for registering!</string>
    <string name="email_sent_success">Email sent successfully to reset your password!</string>

</resources>